--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -7,10 +7,10 @@ font-family: Helvetica;
 #herobutton {
   margin: auto;
   display: block;
-  width: 200px;
-  height: 100px;
+  width: 400px;
+  height: 200px;
   background-color: #f40404;
-  box-shadow: 0px 0px 5px 5px #ffadad;
+  box-shadow: 0px 0px 5px 5px #000000;
   font-family: impact;
   border-radius: 50%;
   color: white;
@@ -59,9 +59,9 @@ font-size: 40px;
 /* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 220px;
   background-color: black;
   color: #fff;
+  min-width: 10vw;
   font-size: 12px;
   text-align: center;
   padding: 10px;
@@ -69,11 +69,15 @@ font-size: 40px;
 
   /* Position the tooltip text - see examples below! */
   z-index: 1;
-  margin-left: 740px;
-
+  margin-left: 56vw;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+#powerImage {
+  width: 25px;
+  height: 25px;
 }
