--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -4,6 +4,11 @@ text-align: center;
 font-family: Helvetica;
 }
 
+body{
+  background-image: url(background.png);
+  background-repeat: repeat-x repeat-y;
+}
+
 #herobutton {
   margin: auto;
   display: block;
@@ -77,7 +82,18 @@ font-size: 40px;
   visibility: visible;
 }
 
-#powerImage {
-  width: 25px;
-  height: 25px;
+#powersword {
+  width: 35px;
+  height: 35px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 2vw;
+}
+
+#clickimg {
+  width: 35px;
+  height: 35px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 2vw;
 }
