--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -22,6 +22,21 @@ body{
   font-size: 50px;
 }
 
+.herobutton100k {
+  background-color: #ffff1a !important;
+  color: black !important;
+}
+
+.upbutton10 {
+  background-color: #ffff1a !important;
+  color: black !important;
+}
+
+.friendbutton10 {
+  background-color: #ffff1a !important;
+  color: black !important;
+}
+
 #playerinfo {
   margin: auto;
   display: block;
