--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -44,6 +44,13 @@ body{
   text-align: center;
 }
 
+#achievements {
+  margin: auto;
+  display: block;
+  font-family: impact;
+  text-align: center;
+}
+
 #upbutton {
   margin: auto;
   display: block;
