--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -1,89 +1,158 @@
 
-h1 {
-text-align: center;
-font-family: Helvetica;
-}
-
 body{
-  background-image: url(background.png);
+  background-image: url(newbackground.jpg);
   background-repeat: repeat-x repeat-y;
 }
 
-#herobutton {
+h2 {
+font-family: Helvetica;
+max-width: 200px;
+}
+
+h3{
+font-family: Helvetica;
+}
+
+h4{
+font-family: Helvetica;
+}
+
+h5{
+font-family: Helvetica;
+}
+
+
+#gridcontainer{
+  display: grid;
+  grid-column-gap: 5vw;
+  max-width: 750px;
+  min-width: 650px;
+  background-color: white;
+  padding: 2vw 2vw 2vw 2vw;
+  border-radius: 7%;
+  justify-content: center;
   margin: auto;
-  display: block;
-  width: 400px;
-  height: 200px;
-  background-color: #f40404;
-  box-shadow: 0px 0px 5px 5px #000000;
-  font-family: impact;
+  margin-top: 5vw;
+}
+
+#buttonzone{
+  grid-column: 2;
+  grid-row: 1/3;
+}
+
+#herobutton {
+  width: 300px;
+  height: 300px;
+  background-color: #3399ff;
+  box-shadow: 0px 0px 5px 5px #ffffff;
+  font-weight: 600;
   border-radius: 50%;
   color: white;
-  font-size: 50px;
+  font-size: 65px;
 }
 
 .herobutton100k {
-  background-color: #ffff1a !important;
+  background-color: #ffff89 !important;
   color: black !important;
 }
 
-.upbutton10 {
-  background-color: #ffff1a !important;
+.upbutton20 {
+  background-color: #ffff89 !important;
   color: black !important;
 }
 
-.friendbutton10 {
-  background-color: #ffff1a !important;
+.friendbutton20 {
+  background-color: #ffff89 !important;
   color: black !important;
 }
 
-#playerinfo {
-  margin: auto;
-  display: block;
-  font-family: impact;
-  text-align: center;
+.completeachievement{
+  color: #3399ff;
+}
+
+#playerstats {
+  font-family: Helvetica;
+  grid-column: 1;
+  grid-row: 1/2;
+}
+
+#playerlevel{
+  font-weight: normal;
+}
+
+#clickeramount{
+  font-weight: normal;
 }
 
 #achievements {
-  margin: auto;
-  display: block;
-  font-family: impact;
+  font-family: Helvetica;
+  grid-column: 1;
+  grid-row: 2/3;
+  max-width: 200px;
+}
+
+#legacy {
+  grid-column: 1;
+  grid-row: 3/4;
+  max-width: 250px;
+}
+
+#legacy h4{
+  font-weight: normal;
+  }
+
+#pointsacheivement{
+  font-weight: normal;
+}
+
+#clickeracheivement{
+  font-weight: normal;
+}
+
+#poweracheivement{
+  font-weight: normal;
+}
+
+#achievmentcounter{
+  font-weight: bolder;
+}
+
+#upgradezone{
+  grid-column: 2;
+  grid-row: 3/4;
   text-align: center;
 }
 
 #upbutton {
-  margin: auto;
-  display: block;
-  width: 150px;
+  width: 200px;
   height: 50px;
-  background-color: blue;
+  background-color: #3399ff;
   color: white;
-  font-family: impact;
-  font-size: 15px;
+  font-weight: 600;
+  font-size: 18px;
+  box-shadow: 0px 0px 5px 5px #ffffff;
+  border-radius: 5%;
+  margin-bottom: 2vw;
 }
 
 #clickerbutton {
-  margin: auto;
-  display: block;
-  width: 150px;
+  width: 200px;
   height: 50px;
-  background-color: purple;
+  background-color: #9933ff;
   color: white;
-  font-family: impact;
-  font-size: 15px;
+  font-weight: 600;
+  font-family: Helvetica;
+  font-size: 18px;
+  box-shadow: 0px 0px 5px 5px #ffffff;
+  border-radius: 5%;
 }
 
-h2 {
-text-align: center;
-font-family: Helvetica;
-font-size: 40px;
-}
 
-/* Tooltip container */
+/* Tooltip
 .tooltip {
 }
 
-/* Tooltip text */
+
 .tooltip .tooltiptext {
   visibility: hidden;
   background-color: black;
@@ -94,28 +163,14 @@ font-size: 40px;
   padding: 10px;
   border-radius: 6px;
 
-  /* Position the tooltip text - see examples below! */
+
   z-index: 1;
   margin-left: 56vw;
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
+
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
 
-#powersword {
-  width: 35px;
-  height: 35px;
-  margin: auto;
-  text-align: center;
-  margin-bottom: 2vw;
-}
-
-#clickimg {
-  width: 35px;
-  height: 35px;
-  margin: auto;
-  text-align: center;
-  margin-bottom: 2vw;
-}
+*/
