--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -34,6 +34,10 @@ font-family: Helvetica;
   margin-top: 3vw;
 }
 
+.disable-dbl-tap-zoom {
+  touch-action: manipulation;
+}
+
 #buttonzone{
   grid-column: 2;
   grid-row: 1/3;
@@ -77,7 +81,7 @@ font-family: Helvetica;
   font-family: Helvetica;
   grid-column: 1;
   grid-row: 2/3;
-  max-width: 200px;
+  max-width: 300px;
 }
 
 #legacy {
@@ -184,3 +188,81 @@ font-family: Helvetica;
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+/* Mobile Layout... for now. */
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+#gridcontainer{
+  max-width: 450px;
+  min-width: 180px;
+  grid-column-gap: 0px;
+  justify-content: center;
+  margin: 15px 15px 15px 15px;
+  border-radius: 3%
+}
+
+#buttonzone{
+  grid-row: 2;
+  grid-column: 1;
+  text-align: center;
+}
+
+#upbutton{
+  width: 150px;
+  height: 50px;
+}
+
+#multibutton{
+  width: 150px;
+  height: 50px;
+  margin-bottom: 2vw;
+}
+
+#playertitle{
+  text-align: center;
+}
+
+#clickerbutton{
+  width: 150px;
+  height: 50px;
+}
+
+#herobutton {
+  width: 200px;
+  height: 200px;
+}
+
+#playerlevel{
+  grid-row:1;
+  grid-column: 1;
+  text-align: center;
+}
+
+#clickeramount{
+  #grid-row: 3;
+  grid-column: 1;
+  text-align: center;
+}
+
+#upgradezone {
+  grid-row: 4;
+  margin-top: 25px;
+  grid-column: 1;
+  text-align: center;
+}
+
+#achievements {
+  grid-row: 5;
+  grid-column: 1;
+  text-align: center;
+}
+
+#legacy {
+  grid-row: 6;
+  grid-column: 1;
+  text-align: center;
+}
+
+}
