--- a/clickerstyle.css
+++ b/clickerstyle.css
@@ -218,12 +218,14 @@ font-family: Helvetica;
 #upbutton{
   width: 150px;
   height: 50px;
+  font-size: 14px;
 }
 
 #multibutton{
   width: 150px;
   height: 50px;
   margin-bottom: 2vw;
+  font-size: 14px;
 }
 
 #playertitle{
@@ -233,6 +235,7 @@ font-family: Helvetica;
 #clickerbutton{
   width: 150px;
   height: 50px;
+  font-size: 14px;
 }
 
 #playerlevel{
